# EquityMind

./: .dockerignore  .env.example  .gitignore  API_FILES_SUMMARY.md  Dockerfile  FRONTEND_SUMMARY.md  Makefile  QUICKSTART_API.md  README.md  RUN_FULL_APP.md  docker-compose.prod.yaml  docker-compose.yml  pyproject.toml  run_api_server.py  test_api.py
.github/workflows/: ci.yml
app/: streamlit_app.py
config/: config.yaml
deploy/: DEPLOY.md
deploy/nginx/: equitymind.conf
docs/: API.md  REACT_INTEGRATION.md  project-prompt.md
frontend/: .env.example  Dockerfile  Dockerfile.prod  README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/nginx/: default.conf
frontend/src/: App.jsx  index.css  main.jsx  theme.jsx
frontend/src/api/: client.js
frontend/src/components/: AgentChat.jsx  AgentWidget.jsx  AssetAnalysis.jsx  ComparisonChart.jsx  Dashboard.jsx  ExportButtons.jsx  HomeChart.jsx  MetricsCards.jsx  OptionsLab.jsx  PortfolioSection.jsx  PriceChart.jsx  ProgressStream.jsx  RankingTable.jsx  (+2 more)
presentation/: EquityMind.pptx  build_deck.py  data.json  ~$EquityMind.pptx
scripts/: agent_smoke.py  check_result.py  run_analysis.py
src/equitymind/: __init__.py  cli.py  config.py  logging_config.py  news.py  notifications.py  pipeline.py
tests/: conftest.py  test_agent.py  test_ai.py  test_backtest_and_alerts.py  test_benchmark.py  test_black_scholes.py  test_config_and_cache.py  test_data_sources.py  test_derivatives_payoff.py  test_exports.py  test_forwards.py  test_fundamentals.py  test_indicators.py  test_metrics_and_comparison.py  test_news.py  test_notifications.py  test_openrouter.py  test_performance.py  test_pipeline_sources.py  test_portfolio.py  test_returns.py  test_risk.py  test_tail_risk.py  test_trend.py  test_volatility.py
(+51 files in other folders)
